# paper_slice

./: .dockerignore  .gitattributes  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_v8.md  DEPLOY_v9.md  Dockerfile  README.md  TODOS.md  asset_manager.py  block_enricher.py  classifier.py  config.py  docker-compose.yml  location.py  main.py  pdf_type_detector.py  pipeline.py  pyproject.toml  schemas.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docker/: entrypoint.sh
scripts/: build.ps1  build.sh  run_local.ps1  run_local.sh
src/paperslice/: __init__.py  classifier.py  config.py  cpu_tuning.py  diff_builder.py  main.py  mineru_runner.py  pdf_chunker.py  pipeline.py  schemas.py  segmenter.py
src/paperslice/utils/: bbox.py  columns.py  logging.py
tests/: test_cpu_tuning.py  test_diff_builder.py  test_mineru_error_classification.py  test_pdf_chunker.py  test_pdf_type_detector.py
